# silver-bullet

./: README.md
appkit/AppKitChat/: AppDelegate.swift  Info.plist
appkit/AppKitChat.xcodeproj/: project.pbxproj
appkit/AppKitChat.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
appkit/AppKitChat/Base.lproj/: MainMenu.xib
appkit/AppKitChatTests/: AppKitChatTests.swift
docs/: _config.yml  about.md  appkit.md  dear-imgui.md  electron.md  flutter.md  imgui.md  index.html  index.md  intro.md  iosmac.md  libui.md  motivation.md  nuklear.md  proton-native.md  pwa.md  qt.md  react-native-desktop.md  react-native.md  revery.md  scitter.md  swing.md  tornadofx.md  webrender.md  webview.md  wxwidgets.md
docs/_includes/: head.html  sidebar.html
docs/_layouts/: default.html  index.html  page.html
docs/_site/: 404.html  atom.xml  index.html
docs/_site/about/: index.html
docs/_site/electron/: index.html
docs/_site/imgui/: index.html
docs/_site/nuklear/: index.html
docs/_site/react-native-desktop/: index.html
electron/: .env.example  .gitignore  README.md  package.json  tsconfig.json
electron/public/: electron.js  index.html
electron/src/: App.tsx  Attachment.tsx  BottomBar.tsx  ChannelHeader.tsx  ChannelList.tsx  ChannelsList.tsx  ChatMessages.tsx  ChatScreen.tsx  Link.tsx  LoginScreen.tsx  Me.tsx  Message.tsx  api.ts  electron.ts  useLocalStorage.ts  useWindowSize.js
nuklear/: CMakeLists.txt  README.md  main.c  overview.c  style.c
revery/: .gitignore  .merlin  App.install  App.re  README.md  SignInButton.re  package.json
(+7 files in other folders)
